--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -21,6 +21,7 @@ imgui-wgpu = "0.12"
 imgui-winit-support = "0.6"
 tobj = "2.0.3"
 wgpu-mipmap = "0.1.0"
+genmesh = "0.6.2"
 
 noder = { path = "../noder" }
 
