--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 [dependencies]
 image = "0.23"
 winit = "0.23"
-cgmath = "0.17"
+nalgebra = "0.23.1"
 log = "0.4"
 wgpu = "0.6"
 futures = "0.3"
