--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -22,7 +22,8 @@ tobj = "2.0.3"
 wgpu-mipmap = "0.1.0"
 genmesh = "0.6.2"
 legion = "0.3.1"
-simplelog = "0.8.0"
+simplelog = "0.9.0"
+ncollide3d = "0.26.1"
 
 noder = { path = "../noder" }
 
