--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -24,6 +24,8 @@ genmesh = "0.6.2"
 legion = "0.3.1"
 simplelog = "0.9.0"
 ncollide3d = "0.26.1"
+imgui-inspect = "0.7.0"
+imgui-inspect-derive = "0.7.0"
 
 noder = { path = "../noder" }
 
